--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "validator": "^13.5.2",
     "winston": "^3.3.3"
   },
